Fixed page jumping when navbar stuck to top

--- a/docs/scripts/index.css
+++ b/docs/scripts/index.css
@@ -29,17 +29,13 @@
     font-weight: 400;
   }
 
-  #header {
-    padding-top: 60px;
-    padding-bottom: 60px;
-    text-align: center;
-    display: block;
-  }
-
   .center {
     margin: auto;
     text-align: center;
-    width: 100%;
+    width: 100%; 
+    padding-top: 60px;
+    padding-bottom: 60px;
+    display: block;
   }
 
   /* Style the navbar */
@@ -82,8 +78,8 @@
   }
 
   /* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
-  .sticky+.content {
-    padding-top: 60px;
+  .navbarOffsetMargin {
+    padding-bottom: 7em;
   }
 
   .transition {
